--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "dev": "nodemon --env-file=.env src/index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mongoose": "^8.18.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
