--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "scripts": {
-    "dev": "nodemon --env-file=.env src/index.js",
+    "dev": "node --env-file=.env --watch src/index.js",
     "start": "node src/index.js"
   },
   "dependencies": {
@@ -11,8 +11,5 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "zod": "^4.1.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
   }
 }
